--- a/FundooApplication/CommonLayer/CommonLayer.csproj
+++ b/FundooApplication/CommonLayer/CommonLayer.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="ResponseModel\" />
+    <Folder Include="RequestModel\" />
+  </ItemGroup>
+
 </Project>
