--- a/FundooApplication/FundooApp/appsettings.json
+++ b/FundooApplication/FundooApp/appsettings.json
@@ -7,5 +7,13 @@
         }
     },
     "ConnectionStrings": { "UserDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=UserDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Jwt": {
+        "Key": "Thisismysecretkey",
+        "Issuer": "https://localhost:44371"
+    },
+    "JwtConfig": {
+        "secret": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL6nu0f",
+        "expirationInMinutes": 1440
+    }
 }
