[Prashik]Added: Authenticate user and add note controller

--- a/FundooApplication/FundooApp/FundooApp.csproj
+++ b/FundooApplication/FundooApp/FundooApp.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\Prashik Jaware\source\repos\BackEnd\FundooApplication\FundooApp\FundooApp.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
