--- a/FundooApplication/FundooApp/appsettings.json
+++ b/FundooApplication/FundooApp/appsettings.json
@@ -10,10 +10,10 @@
     "AllowedHosts": "*",
     "Jwt": {
         "Key": "Thisismysecretkey",
-        "Issuer": "https://localhost:44371"
+        "Issuer": "https://localhost:44362"
     },
-    "JwtConfig": {
+    /*"JwtConfig": {
         "secret": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL6nu0f",
         "expirationInMinutes": 1440
-    }
+    }*/
 }
