[Prashik]Added: Notes API and Authentication for User

--- a/FundooApplication/FundooApp/appsettings.json
+++ b/FundooApplication/FundooApp/appsettings.json
@@ -6,14 +6,10 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "ConnectionStrings": { "UserDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=UserDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" },
+    "ConnectionStrings": { "FundooAppDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FundooAppDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" },
     "AllowedHosts": "*",
     "Jwt": {
         "Key": "Thisismysecretkey",
         "Issuer": "https://localhost:44362"
-    },
-    /*"JwtConfig": {
-        "secret": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL6nu0f",
-        "expirationInMinutes": 1440
-    }*/
+    }
 }
